- Adding convenience builder methods. - Updates test cases. - Patch version bump.